{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 518,
  "lineage": "b6a6f423-5124-81ba-b776-63bd31c8e815",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:572391474763:security-group/sg-09c3405c83c96510f",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-09c3405c83c96510f",
            "ingress": [],
            "name": "my-eks-cluster-cluster-20240203134413305800000005",
            "name_prefix": "my-eks-cluster-cluster-",
            "owner_id": "572391474763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-cluster-cluster"
            },
            "tags_all": {
              "Name": "my-eks-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0752108b948201c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:572391474763:security-group/sg-03e77acebace796d8",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-03e77acebace796d8",
            "ingress": [],
            "name": "my-eks-cluster-node-20240203134412741800000004",
            "name_prefix": "my-eks-cluster-node-",
            "owner_id": "572391474763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-cluster-node",
              "kubernetes.io/cluster/my-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "my-eks-cluster-node",
              "kubernetes.io/cluster/my-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0752108b948201c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3656868352",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09c3405c83c96510f",
            "security_group_rule_id": "sgr-0a81b7983732a9ab4",
            "self": false,
            "source_security_group_id": "sg-03e77acebace796d8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2800950579",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03e77acebace796d8",
            "security_group_rule_id": "sgr-0193366dca4d094ec",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3221309377",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e77acebace796d8",
            "security_group_rule_id": "sgr-0b86827e946558451",
            "self": false,
            "source_security_group_id": "sg-09c3405c83c96510f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3599587761",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e77acebace796d8",
            "security_group_rule_id": "sgr-0475f3b2925e0f487",
            "self": false,
            "source_security_group_id": "sg-09c3405c83c96510f",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-533675559",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e77acebace796d8",
            "security_group_rule_id": "sgr-0dbceeddb72f143ec",
            "self": false,
            "source_security_group_id": "sg-09c3405c83c96510f",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-210960902",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e77acebace796d8",
            "security_group_rule_id": "sgr-097c5a122283f5ace",
            "self": false,
            "source_security_group_id": "sg-09c3405c83c96510f",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1748120013",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e77acebace796d8",
            "security_group_rule_id": "sgr-0ebf32a0973553ca9",
            "self": false,
            "source_security_group_id": "sg-09c3405c83c96510f",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3101416486",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e77acebace796d8",
            "security_group_rule_id": "sgr-041592064ea243dc2",
            "self": false,
            "source_security_group_id": "sg-09c3405c83c96510f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2440719509",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e77acebace796d8",
            "security_group_rule_id": "sgr-048809751fac86cb6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3045626386",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e77acebace796d8",
            "security_group_rule_id": "sgr-0b224fc06585c0817",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-299315709",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-03e77acebace796d8",
            "security_group_rule_id": "sgr-073d1b292913f5aa9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:572391474763:network-acl/acl-0da93db4e01753442",
            "default_network_acl_id": "acl-0da93db4e01753442",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0da93db4e01753442",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "572391474763",
            "subnet_ids": [
              "subnet-00e201b5b279c2323",
              "subnet-047addcf89e2ee85a",
              "subnet-0719ab81907e40f5e",
              "subnet-09c43081547895350",
              "subnet-0c5bae2686ff27c25",
              "subnet-0c6a6b88b6a54eb9f"
            ],
            "tags": {
              "Name": "my-vpc-default",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-default",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0752108b948201c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:572391474763:route-table/rtb-0189a8f22303024b1",
            "default_route_table_id": "rtb-0189a8f22303024b1",
            "id": "rtb-0189a8f22303024b1",
            "owner_id": "572391474763",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "my-vpc-default",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-default",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0752108b948201c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:572391474763:security-group/sg-026ea843f9261d7ac",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-026ea843f9261d7ac",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "572391474763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-vpc-default",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-default",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0752108b948201c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009d8a8e2ea0b2f8a",
            "domain": "vpc",
            "id": "eipalloc-009d8a8e2ea0b2f8a",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-141-73-163.us-east-2.compute.amazonaws.com",
            "public_ip": "3.141.73.163",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-vpc-us-east-2a",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-us-east-2a",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:572391474763:internet-gateway/igw-0125883efbae4fac6",
            "id": "igw-0125883efbae4fac6",
            "owner_id": "572391474763",
            "tags": {
              "Name": "my-vpc",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0752108b948201c7c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009d8a8e2ea0b2f8a",
            "association_id": "eipassoc-0fd8c8dd98b86f7ba",
            "connectivity_type": "public",
            "id": "nat-02f92cf1662dc40ef",
            "network_interface_id": "eni-002550aa2ec959e3f",
            "private_ip": "10.0.101.218",
            "public_ip": "3.141.73.163",
            "subnet_id": "subnet-09c43081547895350",
            "tags": {
              "Name": "my-vpc-us-east-2a",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-us-east-2a",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-070f4a938310249621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02f92cf1662dc40ef",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-070f4a93831024962",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0125883efbae4fac6",
            "id": "r-rtb-07f37e9ade65c1f371080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07f37e9ade65c1f37",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:572391474763:route-table/rtb-070f4a93831024962",
            "id": "rtb-070f4a93831024962",
            "owner_id": "572391474763",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-private",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-private",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0752108b948201c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:572391474763:route-table/rtb-07f37e9ade65c1f37",
            "id": "rtb-07f37e9ade65c1f37",
            "owner_id": "572391474763",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-public",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-public",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0752108b948201c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb03327cb2ff32a2",
            "route_table_id": "rtb-070f4a93831024962",
            "subnet_id": "subnet-047addcf89e2ee85a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05be79745995531c4",
            "route_table_id": "rtb-070f4a93831024962",
            "subnet_id": "subnet-0719ab81907e40f5e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0d7ca5c5611e591",
            "route_table_id": "rtb-070f4a93831024962",
            "subnet_id": "subnet-0c6a6b88b6a54eb9f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0295fc9ff01eab230",
            "route_table_id": "rtb-07f37e9ade65c1f37",
            "subnet_id": "subnet-09c43081547895350"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0137f5292870aee5a",
            "route_table_id": "rtb-07f37e9ade65c1f37",
            "subnet_id": "subnet-00e201b5b279c2323"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cce7e3c632a6426f",
            "route_table_id": "rtb-07f37e9ade65c1f37",
            "subnet_id": "subnet-0c5bae2686ff27c25"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:572391474763:subnet/subnet-047addcf89e2ee85a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047addcf89e2ee85a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "572391474763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-us-east-2a",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "my-vpc-private-us-east-2a",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0752108b948201c7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:572391474763:subnet/subnet-0719ab81907e40f5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0719ab81907e40f5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "572391474763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-us-east-2b",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "my-vpc-private-us-east-2b",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0752108b948201c7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:572391474763:subnet/subnet-0c6a6b88b6a54eb9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6a6b88b6a54eb9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "572391474763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-us-east-2c",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "my-vpc-private-us-east-2c",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0752108b948201c7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:572391474763:subnet/subnet-09c43081547895350",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c43081547895350",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "572391474763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-us-east-2a",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-vpc-public-us-east-2a",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0752108b948201c7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:572391474763:subnet/subnet-00e201b5b279c2323",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e201b5b279c2323",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "572391474763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-us-east-2b",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-vpc-public-us-east-2b",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0752108b948201c7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:572391474763:subnet/subnet-0c5bae2686ff27c25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5bae2686ff27c25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "572391474763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-us-east-2c",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-vpc-public-us-east-2c",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0752108b948201c7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:572391474763:vpc/vpc-0752108b948201c7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0da93db4e01753442",
            "default_route_table_id": "rtb-0189a8f22303024b1",
            "default_security_group_id": "sg-026ea843f9261d7ac",
            "dhcp_options_id": "dopt-04b367807f010183d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0752108b948201c7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0189a8f22303024b1",
            "owner_id": "572391474763",
            "tags": {
              "Name": "my-vpc",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}